CSS Refactoring
